CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2005 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2005.Jul.30 (0.9.15)

  * uncatagorized and messy:
    -----------------------
    * "New" always available.
      (Prepping for when "New" will give options for background colors, etc.)

    * Splash screen appears earlier, along with the version info and cursor.
      Albert Cahalan <albert@users.sf.net>

    * Normal start-up time greatly reduced by splitting out font loading
      into a separate process. You only wait if you want the text tool.
      Albert Cahalan <albert@users.sf.net>

    * added eat_startup_events in an attempt to make early escape possible
      (perhaps the user started Tux Paint by mistake, or the system is
      swapping itself to death) TODO: use do_quit if fully started
      Albert Cahalan <albert@users.sf.net>

    * Normal start-up time greatly reduced by avoiding most stamp work.
      Stamp data is loaded as needed. (TODO: add pre-fetch process)
      Albert Cahalan <albert@users.sf.net>

    * Memory usage down by not keeping stamps in memory. Tux Paint's
      size dropped by about 100 MB. :-)
      Albert Cahalan <albert@users.sf.net>

  * Stamp tool improvements:
    ------------------------
    * Greatly improved stamp outlining (to avoid empty rows or columns
      and other artifacts) by using a thick stippled pattern.
      Albert Cahalan <albert@users.sf.net>

    * Stamp tinting code changed.  Stamp ".dat" files may include
      "tinter=anyhue", "tinter=narrow", "tinter=normal" or "tinter=vector",
      describing how the contents of the stamp should be tinted. (See README)
      Albert Cahalan <albert@users.sf.net>

    * Added "scale" keyword (in stamp ".dat" files) for high-resolution stamp
      images.  (Allows stamps to be made larger without losing quality.)
      Albert Cahalan <albert@users.sf.net>
