@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>July 16, 2005</p>
+<p>September 4, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -294,11 +294,12 @@ New Breed Software</p>
     or displayed on a remote X-Window display.</p>
   </dd>
 
-  <dt><code><b>nosysfonts=yes</b></code></dt>
+  <dt><code><b>sysfonts=yes</b></code></dt>
   <dd>
-    <p>This option prevents Tux&nbsp;Paint from attempting to load fonts
+    <p>This option causes Tux&nbsp;Paint to attempt to load fonts
     (for use in the <b>Text</b> tool) from your operating system.
-    It will only load the ones that come with Tux&nbsp;Paint.</p>
+    Normally, Tux&nbsp;Paint will only load the ones that came bundled
+    with Tux&nbsp;Paint.</p>
   </dd>
 
   <dt><code><b>nostamps=yes</b></code></dt>
@@ -726,7 +727,7 @@ New Breed Software</p>
     --nooutlines<br>
     --nostamps<br>
     --nostampcontrols<br>
-    --nosysfonts<br>
+    --sysfonts<br>
     --mirrorstamps<br>
     --keyboard<br>
     --savedir&nbsp;DIRECTORY<br>
@@ -759,7 +760,7 @@ New Breed Software</p>
     --outlines<br>
     --stamps<br>
     --stampcontrols<br>
-    --sysfonts<br>
+    --nosysfonts<br>
     --dontmirrorstamps<br>
     --mouse<br>
     --saveoverask<br>
