@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-2005.Jul.30 (0.9.15)
+2005.Sept.4 (0.9.15)
 
   * uncatagorized and messy:
     -----------------------
@@ -229,6 +229,9 @@ http://www.newbreedsoftware.com/tuxpaint/
 
   * Compiling, porting and packaging updates:
     -----------------------------------------
+    * Created Makefile to convert HTML documentation into plaintext using Links
+      (I can never remember the precise options!)
+
     * *_PREFIX variables in Makefile no longer need trailing '/'.
 
     * Added "Categories" to the 'tuxpaint.desktop' file
